# oubliette-sec-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/oubliette_sec_utils/: __init__.py  argv.py  paths.py  ssrf.py
tests/: test_argv.py  test_paths.py  test_ssrf.py
